examples/test/testpolicy5783.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5783
  namespace: namespace376
spec:
  podSelector:
    matchLabels:
      key41: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value34
          key32: value6
      podSelector:
        matchLabels:
          key45: value27
          key32: value1
          key20: value21
